--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-jersey')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
