--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jersey')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("com.h2database:h2")
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
