--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 plugins {
-    id "com.moowork.node" version "1.2.0"
+    id "com.moowork.node" version "1.3.1"
 }
 
 apply plugin: 'java'
@@ -38,20 +38,20 @@ dependencies {
 }
 
 node {
-    npmVersion = '5.5.1'
+    npmVersion = '6.1.0'
     download = true
     nodeModulesDir = file("${project.projectDir}/src/main/react-app")
 }
 
 task npmInstall(overwrite: true, type: NpmTask, dependsOn: 'npmSetup') {
-    inputs.file('package.json')
+    inputs.file("${project.projectDir}/src/main/react-app/package.json")
     outputs.upToDateWhen { file('node_modules').exists() }
 
     npmCommand = ['install']
 }
 
 task npmBuild(overwrite: true, type: NpmTask, dependsOn: 'npmInstall') {
-    inputs.file('package.json')
+    inputs.file("${project.projectDir}/src/main/react-app/package.json")
     outputs.upToDateWhen { file('node_modules').exists() }
 
     npmCommand = ['run', 'build']
